modules/gdscript/tests/scripts/parser/errors/export_enum_wrong_type.gd
@export_enum("A", "B", "C") var x: Color

func test():
    pass
